--- a/_config.yml
+++ b/_config.yml
@@ -178,7 +178,7 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  TEST:
+  publications:
     output: true
     permalink: /:collection/:path/
   portfolio:
