--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Assistant Professor of Management at West Virginia University's John Chambers College of Business and Economics"
   location         : "Morgantown, WV"
-  employer         : #"https://business.wvu.edu/"
+  employer         : [West Virginia University](https://business.wvu.edu/)
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=G3a-ALAAAAAJ&hl=en&oi=ao"
   email            : "james.field2@mail.wvu.edu"
