--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jamie Field"
   avatar           : "profile.png"
-  bio              : "Assistant Professor of Management at West Virginia University's John Chambers College of Business and Economics"
+  bio              : "Assistant Professor of Management at West Virginia University's John Chambers College of Business"
   location         : "Morgantown, WV"
   employer         : 
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
