--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
   - title: "Hobbies"
     url: /hobby/
     
-  - title: "Teaching_test"
-    url: /test/
+  - title: "Portfolio"
+    url: /portfolio/
     
    
