--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  <img src='/images/JohnChambersB&E_logolockup.jpg'>
 
 # Reading Files
 include:
