--- a/_config.yml
+++ b/_config.yml
@@ -186,7 +186,7 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  teaching1:
+  portfolio:
     output: true
     permalink: /:collection/:path/
 
@@ -237,7 +237,7 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _teaching1
+  # _portfolio
   - scope:
       path: ""
       type: teaching
