--- a/_config.yml
+++ b/_config.yml
@@ -240,7 +240,7 @@ defaults:
   # _portfolio
   - scope:
       path: ""
-      type: teaching
+      type: portfolio
     values:
       layout: single
       author_profile: true
