--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,5 @@ main:
   - title: "Hobbies"
     url: /hobby/
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Instruction"
+    url: /instruction/
